--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -7,6 +7,9 @@ ENV TERM xterm
 
 RUN apk update && \
     apk add --no-cache bash curl wget openssh git rsync nano
+
+#RUN apk add --no-cache emacs --update-cache --repository http://dl-3.alpinelinux.org/alpine/edge/testing/ 
 RUN rm -rf /tmp/* /var/cache/apk/*
 
-WORKDIR /
+WORKDIR /root/
+CMD ["/bin/bash"]
