--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -3,13 +3,18 @@ FROM alpine:3.3
 MAINTAINER ymst180 <ymst180@gmail.com>
 
 USER root
+WORKDIR /
 ENV TERM xterm
 
 RUN apk update && \
-    apk add --no-cache bash curl wget openssh git rsync nano
-
+	apk add bash curl wget openssh git rsync nano
+#RUN apk add --no-cache nginx vim
 #RUN apk add --no-cache emacs --update-cache --repository http://dl-3.alpinelinux.org/alpine/edge/testing/ 
+
 RUN rm -rf /tmp/* /var/cache/apk/*
 
-WORKDIR /root/
+COPY override/ /
+RUN chmod +x /root/start.sh
+RUN /root/start.sh
+
 CMD ["/bin/bash"]
