--- a/glassfish/Dockerfile
+++ b/glassfish/Dockerfile
@@ -8,10 +8,18 @@ RUN mkdir -p ${GLASSFISH_INSTALL}
 WORKDIR ${GLASSFISH_INSTALL}
 ENV GLASSFISH_URL=http://download.oracle.com/glassfish/4.1.1/release/glassfish-4.1.1.zip
 RUN wget --no-check-certificate $GLASSFISH_URL
-ENV GLASSFISH_DIRECTORY=glassfish
-#RUN unzip -p ${GLASSFISH_URL##*/} | 
-#RUN  ${GLASSFISH_URL##*/} tar -xf- -C ${GLASSFISH_INSTALL}/${GlASSFISH_DIRECTORY}
-#RUN unzip ${GLASSFISH_URL##*/} -d ${GLASSFISH_INSTALL}/$GLASSFISH_DIRECTORY
-#RUN rm -f ${GLASSFISH_URL##*/}
-#ENV GLASSFISH_HOME=/opt/$GLASSFISH_DIRECTORY
+RUN unzip ${GLASSFISH_URL##*/} && rm -f ${GLASSFISH_URL##*/}
+ENV GLASSFISH_DIRECTORY=glassfish4 && GLASSFISH_PASSWORD=admin && \ 
+	PATH=$PATH:/$GLASSFISH_INSTALL/$GLASSFISH_DIRECTORY/bin 
+RUN echo "AS_ADMIN_PASSWORD=" > /tmp/glassfishpwd && \
+    echo "AS_ADMIN_NEWPASSWORD=${GLASSFISH_PASSWORD}" >> /tmp/glassfishpwd  && \
+	asadmin --user=admin --passwordfile=/tmp/glassfishpwd change-admin-password --domain_name domain1
+RUN asadmin start-domain && \
+    echo "AS_ADMIN_PASSWORD=${GLASSFISH_PASSWORD}" > /tmp/glassfishpwd && \
+    asadmin --user=admin --passwordfile=/tmp/glassfishpwd enable-secure-admin && \
+    asadmin --user=admin stop-domain
+RUN rm -Rf /tmp/*
 
+EXPOSE 4848 8080 8181
+
+CMD ["asadmin", "start-domain", "-v"]
