--- a/glassfish/Makefile
+++ b/glassfish/Makefile
@@ -10,6 +10,10 @@ rebuild:
 	docker build --no-cache=true --rm -t ${REPOSITORY}:${TAG} .
 bash:
 	docker run -it --rm --name $(CONTAINER) $(REPOSITORY):${TAG} /bin/bash
+run:
+	docker run -d \
+	-p 4848:4848 -p 8080:8080 -p 8181:8181 \
+	--name $(CONTAINER) $(REPOSITORY):${TAG}
 exec:
 	docker exec -it $(CONTAINER) /bin/bash
 rm:
